--- a/openlane/Matrix_Convolution/config.json
+++ b/openlane/Matrix_Convolution/config.json
@@ -9,6 +9,7 @@
     "CLOCK_PORT": "clk",
     "CLOCK_NET": "Matrix_Convolution.clk",
     "FP_SIZING": "absolute",
+    "DIE_AREA": "0 0 500 500",
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "NO_SYNTH_CELL_LIST": "dir::no_synth.cells",
     "DRC_EXCLUDE_CELL_LIST": "dir::drc_exclude.cells",
