--- a/openlane/AI_Accelerator_Top/config.json
+++ b/openlane/AI_Accelerator_Top/config.json
@@ -20,7 +20,7 @@
     ],
     "CLOCK_PERIOD": 25,
     "CLOCK_PORT": "wb_clk_i",
-    "CLOCK_NET": "AI_Accelerator_Top.clk",
+    "CLOCK_NET": "wb_clk_i",
     "FP_SIZING": "absolute",
     "DIE_AREA": "0 0 2500 1500",
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
