--- a/openlane/AI_Accelerator_Top/config.json
+++ b/openlane/AI_Accelerator_Top/config.json
@@ -8,25 +8,14 @@
         "dir::../../KnightMCU/verilog/src/chatgpt/Matrix_Multiplication.v",
         "dir::../../KnightMCU/verilog/src/chatgpt/AI_Accelerator_Top.v"
     ],
-    "EXTRA_LEFS": [
-      "dir::../../lef/Matrix_Multiplication.lef",
-      "dir::../../lef/Matrix_Convolution.lef",
-      "dir::../../lef/RAM256.lef"
-    ],
-    "EXTRA_GDS_FILES": [
-      "dir::../../gds/Matrix_Multiplication.gds",
-      "dir::../../gds/Matrix_Convolution.gds",
-      "dir::../../gds/RAM256.gds"
-    ],
     "CLOCK_PERIOD": 25,
     "CLOCK_PORT": "wb_clk_i",
     "CLOCK_NET": "wb_clk_i",
-    "FP_SIZING": "absolute",
-    "DIE_AREA": "0 0 2500 1500",
+    "FP_SIZING": "auto",
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "NO_SYNTH_CELL_LIST": "dir::no_synth.cells",
     "DRC_EXCLUDE_CELL_LIST": "dir::drc_exclude.cells",
-    "PL_TARGET_DENSITY": 0.4,
+    "PL_TARGET_DENSITY": 0.2,
     "PL_RESIZER_SETUP_SLACK_MARGIN": 0.4,
     "PL_RESIZER_MAX_SLEW_MARGIN": 50,
     "GLB_RESIZER_MAX_SLEW_MARGIN": 50,
