Use AI accelerator directly

--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -19,8 +19,8 @@
         "dir::../../KnightMCU/verilog/src/chatgpt/Matrix_Multiplication.v",
         "dir::../../KnightMCU/verilog/src/chatgpt/AI_Accelerator_Top.v",
     ],
-    "EXTRA_LEFS": "dir::../../lef/user_proj.lef",
-    "EXTRA_GDS_FILES": "dir::../../gds/user_proj.gds",
+    "EXTRA_LEFS": "dir::../../lef/AI_Accelerator_Top.lef",
+    "EXTRA_GDS_FILES": "dir::../../gds/AI_Accelerator_Top.gds",
     "BASE_SDC_FILE": "dir::base_user_project_wrapper.sdc",
     "IO_SYNC": 0,
     "FP_PDN_CHECK_NODES": 0,
