--- a/openlane/AI_Accelerator_Top/config.json
+++ b/openlane/AI_Accelerator_Top/config.json
@@ -16,7 +16,10 @@
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "NO_SYNTH_CELL_LIST": "dir::no_synth.cells",
     "DRC_EXCLUDE_CELL_LIST": "dir::drc_exclude.cells",
-    "PL_TARGET_DENSITY": 0.4,
+    "PL_TARGET_DENSITY": 0.2,
+    "GRT_ALLOW_CONGESTION": true,
+    "GRT_ANT_ITERS": 50,
+    "GRT_ANT_MARGIN": 12,
     "PL_RESIZER_SETUP_SLACK_MARGIN": 0.4,
     "PL_RESIZER_MAX_SLEW_MARGIN": 50,
     "GLB_RESIZER_MAX_SLEW_MARGIN": 50,
