--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -17,7 +17,7 @@
         "dir::../../KnightMCU/verilog/src/mine/RAM256.v",
         "dir::../../KnightMCU/verilog/src/chatgpt/Matrix_Convolution.v",
         "dir::../../KnightMCU/verilog/src/chatgpt/Matrix_Multiplication.v",
-        "dir::../../KnightMCU/verilog/src/chatgpt/AI_Accelerator_Top.v",
+        "dir::../../KnightMCU/verilog/src/chatgpt/AI_Accelerator_Top.v"
     ],
     "EXTRA_LEFS": "dir::../../lef/AI_Accelerator_Top.lef",
     "EXTRA_GDS_FILES": "dir::../../gds/AI_Accelerator_Top.gds",
