--- a/openlane/AI_Accelerator_Top/config.json
+++ b/openlane/AI_Accelerator_Top/config.json
@@ -3,10 +3,24 @@
     "DESIGN_IS_CORE": 0,
     "VERILOG_FILES": [
         "dir::../../KnightMCU/verilog/src/mine/constants.v",
-        "dir::../../KnightMCU/verilog/src/mine/RAM256.v",
+        "dir::../../KnightMCU/verilog/src/chatgpt/AI_Accelerator_Top.v"
+    ],
+    "VERILOG_FILES_BLACKBOX": [
+        "dir::../../KnightMCU/verilog/src/mine/constants.v",
         "dir::../../KnightMCU/verilog/src/chatgpt/Matrix_Convolution.v",
         "dir::../../KnightMCU/verilog/src/chatgpt/Matrix_Multiplication.v",
-        "dir::../../KnightMCU/verilog/src/chatgpt/AI_Accelerator_Top.v"
+        "dir::../../mgmt_core_wrapper/verilog/rtl/RAM256.v"
+    ],
+    "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
+    "EXTRA_LEFS": [
+        "dir::../../mgmt_core_wrapper/lef/RAM256.lef",
+        "dir::../../lef/Matrix_Convolution.lef",
+        "dir::../../lef/Matrix_Multiplication.lef"
+    ],
+    "EXTRA_GDS_FILES": [
+	"dir::../../mgmt_core_wrapper/gds/RAM256.gds",
+	"dir::../../gds/Matrix_Convolution.gds",
+	"dir::../../gds/Matrix_Multiplication.gds"
     ],
     "CLOCK_PERIOD": 25,
     "CLOCK_PORT": "wb_clk_i",
@@ -16,8 +30,10 @@
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "NO_SYNTH_CELL_LIST": "dir::no_synth.cells",
     "DRC_EXCLUDE_CELL_LIST": "dir::drc_exclude.cells",
-    "PL_TARGET_DENSITY": 0.2,
+    "PL_TARGET_DENSITY": 0.16,
     "GRT_ALLOW_CONGESTION": true,
+    "GRT_OVERFLOW_ITERS": 100,
+    "ROUTING_OPT_ITERS": 100,
     "GRT_ANT_ITERS": 50,
     "GRT_ANT_MARGIN": 12,
     "PL_RESIZER_SETUP_SLACK_MARGIN": 0.4,
