--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,13 @@
 *.lef filter=lfs diff=lfs merge=lfs -text
 *.mag filter=lfs diff=lfs merge=lfs -text
 *.def filter=lfs diff=lfs merge=lfs -text
+verilog/gl/Matrix_Convolution.nl.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/Matrix_Multiplication.nl.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/Matrix_Multiplication.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/user_project_wrapper.nl.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/user_project_wrapper.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/user_proj.nl.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/AI_Accelerator_Top.nl.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/Matrix_Convolution.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/user_proj.v filter=lfs diff=lfs merge=lfs -text
+verilog/gl/AI_Accelerator_Top.v filter=lfs diff=lfs merge=lfs -text
