--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@ verilog/gl/user_proj.v filter=lfs diff=lfs merge=lfs -text
 verilog/gl/AI_Accelerator_Top.v filter=lfs diff=lfs merge=lfs -text
 knight.png filter=lfs diff=lfs merge=lfs -text
 layout.png filter=lfs diff=lfs merge=lfs -text
+*.lib filter=lfs diff=lfs merge=lfs -text
