--- a/openlane/AI_Accelerator_Top/config.json
+++ b/openlane/AI_Accelerator_Top/config.json
@@ -1,6 +1,6 @@
 {
     "DESIGN_NAME": "AI_Accelerator_Top",
-    "DESIGN_IS_CORE": 0,
+    "ROUTING_CORES": 1,
     "VERILOG_FILES": [
         "dir::../../KnightMCU/verilog/src/mine/constants.v",
         "dir::../../KnightMCU/verilog/src/chatgpt/AI_Accelerator_Top.v"
@@ -30,16 +30,16 @@
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "NO_SYNTH_CELL_LIST": "dir::no_synth.cells",
     "DRC_EXCLUDE_CELL_LIST": "dir::drc_exclude.cells",
-    "PL_TARGET_DENSITY": 0.16,
+    "PL_TARGET_DENSITY": 0.5,
     "GRT_ALLOW_CONGESTION": true,
     "GRT_OVERFLOW_ITERS": 100,
     "ROUTING_OPT_ITERS": 100,
     "GRT_ANT_ITERS": 50,
     "GRT_ANT_MARGIN": 12,
-    "PL_RESIZER_SETUP_SLACK_MARGIN": 0.4,
+    "PL_RESIZER_SETUP_SLACK_MARGIN": 0.5,
     "PL_RESIZER_MAX_SLEW_MARGIN": 50,
     "GLB_RESIZER_MAX_SLEW_MARGIN": 50,
-    "GLB_RESIZER_SETUP_SLACK_MARGIN": 0.2,
+    "GLB_RESIZER_SETUP_SLACK_MARGIN": 0.3,
     "GRT_MAX_DIODE_INS_ITERS": 20,
     "GRT_ANT_ITERS": 20,
     "MAGIC_DEF_LABELS": 0,
@@ -53,7 +53,35 @@
     "IO_SYNC": 0,
     "BASE_SDC_FILE": "dir::base_user_proj.sdc",
     "DIODE_INSERTION_STRATEGY": 3,
-    "RUN_CVC": 1,
+    "FP_PDN_CHECK_NODES": 0,
+    "PL_RESIZER_DESIGN_OPTIMIZATIONS": 0,
+    "PL_RESIZER_TIMING_OPTIMIZATIONS": 0,
+    "PL_RESIZER_BUFFER_INPUT_PORTS": 0,
+    "FP_PDN_ENABLE_RAILS": 0,
+    "DIODE_INSERTION_STRATEGY": 0,
+    "RUN_FILL_INSERTION": 0,
+    "RUN_TAP_DECAP_INSERTION": 0,
+    "FP_PDN_VPITCH": 180,
+    "FP_PDN_HPITCH": 180,
+    "CLOCK_TREE_SYNTH": 0,
+    "FP_PDN_VOFFSET": 5,
+    "FP_PDN_HOFFSET": 5,
+    "MAGIC_ZEROIZE_ORIGIN": 0,
+    "FP_SIZING": "absolute",
+    "RUN_CVC": 0,
+    "FP_IO_VTHICKNESS_MULT": 4,
+    "FP_IO_HTHICKNESS_MULT": 4,
+    "FP_PDN_CORE_RING": 1,
+    "FP_PDN_CORE_RING_VWIDTH": 3.1,
+    "FP_PDN_CORE_RING_HWIDTH": 3.1,
+    "FP_PDN_CORE_RING_VOFFSET": 12.45,
+    "FP_PDN_CORE_RING_HOFFSET": 12.45,
+    "FP_PDN_CORE_RING_VSPACING": 1.7,
+    "FP_PDN_CORE_RING_HSPACING": 1.7,
+    "FP_PDN_VWIDTH": 3.1,
+    "FP_PDN_HWIDTH": 3.1,
+    "FP_PDN_VSPACING": "expr::(5 * $FP_PDN_CORE_RING_VWIDTH)",
+    "FP_PDN_HSPACING": "expr::(5 * $FP_PDN_CORE_RING_HWIDTH)",
     "pdk::sky130*": {
         "FP_CORE_UTIL": 45,
         "RT_MAX_LAYER": "met4",
