--- a/openlane/Control_Unit/pin_order.cfg
+++ b/openlane/Control_Unit/pin_order.cfg
@@ -1,111 +1,83 @@
 #BUS_SORT
 
-#E
-data_i\[0\]
-data_i\[1\]
-data_i\[2\]
-data_i\[3\]
-data_i\[4\]
-data_i\[5\]
-data_i\[6\]
-data_i\[7\]
-data_i\[8\]
-data_i\[9\]
-data_i\[10\]
-data_i\[11\]
-data_i\[12\]
-data_i\[13\]
-data_i\[14\]
-data_i\[15\]
-data_i\[16\]
-data_i\[17\]
-data_i\[18\]
-data_i\[19\]
-data_i\[20\]
-data_i\[21\]
-data_i\[22\]
-data_i\[23\]
-data_i\[24\]
-data_i\[25\]
-data_i\[26\]
-data_i\[27\]
-data_i\[28\]
-data_i\[29\]
-data_i\[30\]
-data_i\[31\]
+#N
 
-#W
-data_o\[0\]
-data_o\[1\]
-data_o\[2\]
-data_o\[3\]
-data_o\[4\]
-data_o\[5\]
-data_o\[6\]
-data_o\[7\]
-data_o\[8\]
-data_o\[9\]
-data_o\[10\]
-data_o\[11\]
-data_o\[12\]
-data_o\[13\]
-data_o\[14\]
-data_o\[15\]
-data_o\[16\]
-data_o\[17\]
-data_o\[18\]
-data_o\[19\]
-data_o\[20\]
-data_o\[21\]
-data_o\[22\]
-data_o\[23\]
-data_o\[24\]
-data_o\[25\]
-data_o\[26\]
-data_o\[27\]
-data_o\[28\]
-data_o\[29\]
-data_o\[30\]
-data_o\[31\]
+convolution_enable
+multiplier_enable
+matrix_conv_done
+matrix_mult_done
 
 #S
-addr_o\[0\]
-addr_o\[1\]
-addr_o\[2\]
-addr_o\[3\]
-addr_o\[4\]
-addr_o\[5\]
-addr_o\[6\]
-addr_o\[7\]
-addr_o\[8\]
-addr_o\[9\]
-addr_o\[10\]
-addr_o\[11\]
-addr_o\[12\]
-addr_o\[13\]
-addr_o\[14\]
-addr_o\[15\]
-addr_o\[16\]
-addr_o\[17\]
-addr_o\[18\]
-addr_o\[19\]
-addr_o\[20\]
-addr_o\[21\]
-addr_o\[22\]
-addr_o\[23\]
-addr_o\[24\]
-addr_o\[25\]
-addr_o\[26\]
-addr_o\[27\]
-addr_o\[28\]
-addr_o\[29\]
-addr_o\[30\]
-addr_o\[31\]
+finished
 
-clk
-done
-enable
-mem_opdone
-reset
-mem_operation\[0\]
-mem_operation\[1\]
+#W
+operation[0]
+operation[1]
+operation[2]
+operation[3]
+operation[4]
+operation[5]
+operation[6]
+operation[7]
+operation[8]
+operation[9]
+operation[10]
+operation[11]
+operation[12]
+operation[13]
+operation[14]
+operation[15]
+operation[16]
+operation[17]
+operation[18]
+operation[19]
+operation[20]
+operation[21]
+operation[22]
+operation[23]
+operation[24]
+operation[25]
+operation[26]
+operation[27]
+operation[28]
+operation[29]
+operation[30]
+operation[31]
+
+#E
+status[0]
+status[1]
+status[2]
+status[3]
+status[4]
+status[5]
+status[6]
+status[7]
+status[8]
+status[9]
+status[10]
+status[11]
+status[12]
+status[13]
+status[14]
+status[15]
+status[16]
+status[17]
+status[18]
+status[19]
+status[20]
+status[21]
+status[22]
+status[23]
+status[24]
+status[25]
+status[26]
+status[27]
+status[28]
+status[29]
+status[30]
+status[31]
+
+
+
+#S
