--- a/openlane/Control_Unit/pin_order.cfg
+++ b/openlane/Control_Unit/pin_order.cfg
@@ -11,72 +11,72 @@ matrix_mult_done
 finished
 
 #W
-operation[0]
-operation[1]
-operation[2]
-operation[3]
-operation[4]
-operation[5]
-operation[6]
-operation[7]
-operation[8]
-operation[9]
-operation[10]
-operation[11]
-operation[12]
-operation[13]
-operation[14]
-operation[15]
-operation[16]
-operation[17]
-operation[18]
-operation[19]
-operation[20]
-operation[21]
-operation[22]
-operation[23]
-operation[24]
-operation[25]
-operation[26]
-operation[27]
-operation[28]
-operation[29]
-operation[30]
-operation[31]
+operation\[0\]
+operation\[1\]
+operation\[2\]
+operation\[3\]
+operation\[4\]
+operation\[5\]
+operation\[6\]
+operation\[7\]
+operation\[8\]
+operation\[9\]
+operation\[10\]
+operation\[11\]
+operation\[12\]
+operation\[13\]
+operation\[14\]
+operation\[15\]
+operation\[16\]
+operation\[17\]
+operation\[18\]
+operation\[19\]
+operation\[20\]
+operation\[21\]
+operation\[22\]
+operation\[23\]
+operation\[24\]
+operation\[25\]
+operation\[26\]
+operation\[27\]
+operation\[28\]
+operation\[29\]
+operation\[30\]
+operation\[31\]
 
 #E
-status[0]
-status[1]
-status[2]
-status[3]
-status[4]
-status[5]
-status[6]
-status[7]
-status[8]
-status[9]
-status[10]
-status[11]
-status[12]
-status[13]
-status[14]
-status[15]
-status[16]
-status[17]
-status[18]
-status[19]
-status[20]
-status[21]
-status[22]
-status[23]
-status[24]
-status[25]
-status[26]
-status[27]
-status[28]
-status[29]
-status[30]
-status[31]
+status\[0\]
+status\[1\]
+status\[2\]
+status\[3\]
+status\[4\]
+status\[5\]
+status\[6\]
+status\[7\]
+status\[8\]
+status\[9\]
+status\[10\]
+status\[11\]
+status\[12\]
+status\[13\]
+status\[14\]
+status\[15\]
+status\[16\]
+status\[17\]
+status\[18\]
+status\[19\]
+status\[20\]
+status\[21\]
+status\[22\]
+status\[23\]
+status\[24\]
+status\[25\]
+status\[26\]
+status\[27\]
+status\[28\]
+status\[29\]
+status\[30\]
+status\[31\]
 
 
 
