Forgot clk and reset

--- a/openlane/Control_Unit/pin_order.cfg
+++ b/openlane/Control_Unit/pin_order.cfg
@@ -1,7 +1,6 @@
 #BUS_SORT
 
 #N
-
 convolution_enable
 multiplier_enable
 matrix_conv_done
@@ -9,6 +8,8 @@ matrix_mult_done
 
 #S
 finished
+clk
+reset
 
 #W
 operation\[0\]
@@ -77,7 +78,3 @@ status\[28\]
 status\[29\]
 status\[30\]
 status\[31\]
-
-
-
-#S
