Making disconnected pins go away
Controller and accelerators are now properly connected

--- a/openlane/AI_Accelerator_Top/macro.cfg
+++ b/openlane/AI_Accelerator_Top/macro.cfg
@@ -1,3 +1,6 @@
-sram 1000 100 N
-matrix_conv 300 760 W
-matrix_mult 1550 760 E
+wb_slave_ctrl 450 200 N
+sram 1700 100 N
+mem_ctrl 1275 200 N
+ctrl_unit 1325 1200 N
+matrix_conv 300 760 N
+matrix_mult 1550 760 N
