--- a/openlane/Memory_Controller/pin_order.cfg
+++ b/openlane/Memory_Controller/pin_order.cfg
@@ -1,111 +1,332 @@
 #BUS_SORT
 
-#E
-data_i\[0\]
-data_i\[1\]
-data_i\[2\]
-data_i\[3\]
-data_i\[4\]
-data_i\[5\]
-data_i\[6\]
-data_i\[7\]
-data_i\[8\]
-data_i\[9\]
-data_i\[10\]
-data_i\[11\]
-data_i\[12\]
-data_i\[13\]
-data_i\[14\]
-data_i\[15\]
-data_i\[16\]
-data_i\[17\]
-data_i\[18\]
-data_i\[19\]
-data_i\[20\]
-data_i\[21\]
-data_i\[22\]
-data_i\[23\]
-data_i\[24\]
-data_i\[25\]
-data_i\[26\]
-data_i\[27\]
-data_i\[28\]
-data_i\[29\]
-data_i\[30\]
-data_i\[31\]
-
 #W
-data_o\[0\]
-data_o\[1\]
-data_o\[2\]
-data_o\[3\]
-data_o\[4\]
-data_o\[5\]
-data_o\[6\]
-data_o\[7\]
-data_o\[8\]
-data_o\[9\]
-data_o\[10\]
-data_o\[11\]
-data_o\[12\]
-data_o\[13\]
-data_o\[14\]
-data_o\[15\]
-data_o\[16\]
-data_o\[17\]
-data_o\[18\]
-data_o\[19\]
-data_o\[20\]
-data_o\[21\]
-data_o\[22\]
-data_o\[23\]
-data_o\[24\]
-data_o\[25\]
-data_o\[26\]
-data_o\[27\]
-data_o\[28\]
-data_o\[29\]
-data_o\[30\]
-data_o\[31\]
+mconv_mem_op\[0\]
+mconv_mem_op\[1\]
+
+mconv_data\[0\]
+mconv_data\[1\]
+mconv_data\[2\]
+mconv_data\[3\]
+mconv_data\[4\]
+mconv_data\[5\]
+mconv_data\[6\]
+mconv_data\[7\]
+mconv_data\[8\]
+mconv_data\[9\]
+mconv_data\[10\]
+mconv_data\[11\]
+mconv_data\[12\]
+mconv_data\[13\]
+mconv_data\[14\]
+mconv_data\[15\]
+mconv_data\[16\]
+mconv_data\[17\]
+mconv_data\[18\]
+mconv_data\[19\]
+mconv_data\[20\]
+mconv_data\[21\]
+mconv_data\[22\]
+mconv_data\[23\]
+mconv_data\[24\]
+mconv_data\[25\]
+mconv_data\[26\]
+mconv_data\[27\]
+mconv_data\[28\]
+mconv_data\[29\]
+mconv_data\[30\]
+mconv_data\[31\]
+
+mconv_addr\[0\]
+mconv_addr\[1\]
+mconv_addr\[2\]
+mconv_addr\[3\]
+mconv_addr\[4\]
+mconv_addr\[5\]
+mconv_addr\[6\]
+mconv_addr\[7\]
+mconv_addr\[8\]
+mconv_addr\[9\]
+mconv_addr\[10\]
+mconv_addr\[11\]
+mconv_addr\[12\]
+mconv_addr\[13\]
+mconv_addr\[14\]
+mconv_addr\[15\]
+mconv_addr\[16\]
+mconv_addr\[17\]
+mconv_addr\[18\]
+mconv_addr\[19\]
+mconv_addr\[20\]
+mconv_addr\[21\]
+mconv_addr\[22\]
+mconv_addr\[23\]
+mconv_addr\[24\]
+mconv_addr\[25\]
+mconv_addr\[26\]
+mconv_addr\[27\]
+mconv_addr\[28\]
+mconv_addr\[29\]
+mconv_addr\[30\]
+mconv_addr\[31\]
+
+mem_opdone
+
+#N
+mmul_mem_op\[0\]
+mmul_mem_op\[1\]
+
+mmul_data\[0\]
+mmul_data\[1\]
+mmul_data\[2\]
+mmul_data\[3\]
+mmul_data\[4\]
+mmul_data\[5\]
+mmul_data\[6\]
+mmul_data\[7\]
+mmul_data\[8\]
+mmul_data\[9\]
+mmul_data\[10\]
+mmul_data\[11\]
+mmul_data\[12\]
+mmul_data\[13\]
+mmul_data\[14\]
+mmul_data\[15\]
+mmul_data\[16\]
+mmul_data\[17\]
+mmul_data\[18\]
+mmul_data\[19\]
+mmul_data\[20\]
+mmul_data\[21\]
+mmul_data\[22\]
+mmul_data\[23\]
+mmul_data\[24\]
+mmul_data\[25\]
+mmul_data\[26\]
+mmul_data\[27\]
+mmul_data\[28\]
+mmul_data\[29\]
+mmul_data\[30\]
+mmul_data\[31\]
+
+mmul_addr\[0\]
+mmul_addr\[1\]
+mmul_addr\[2\]
+mmul_addr\[3\]
+mmul_addr\[4\]
+mmul_addr\[5\]
+mmul_addr\[6\]
+mmul_addr\[7\]
+mmul_addr\[8\]
+mmul_addr\[9\]
+mmul_addr\[10\]
+mmul_addr\[11\]
+mmul_addr\[12\]
+mmul_addr\[13\]
+mmul_addr\[14\]
+mmul_addr\[15\]
+mmul_addr\[16\]
+mmul_addr\[17\]
+mmul_addr\[18\]
+mmul_addr\[19\]
+mmul_addr\[20\]
+mmul_addr\[21\]
+mmul_addr\[22\]
+mmul_addr\[23\]
+mmul_addr\[24\]
+mmul_addr\[25\]
+mmul_addr\[26\]
+mmul_addr\[27\]
+mmul_addr\[28\]
+mmul_addr\[29\]
+mmul_addr\[30\]
+mmul_addr\[31\]
+
+#E
+sram_en
+sram_we\[0\]
+sram_we\[1\]
+sram_we\[2\]
+sram_we\[3\]
+
+sram_addr\[0\]
+sram_addr\[1\]
+sram_addr\[2\]
+sram_addr\[3\]
+sram_addr\[4\]
+sram_addr\[5\]
+sram_addr\[6\]
+sram_addr\[7\]
+
+sram_data_o\[0\]
+sram_data_o\[1\]
+sram_data_o\[2\]
+sram_data_o\[3\]
+sram_data_o\[4\]
+sram_data_o\[5\]
+sram_data_o\[6\]
+sram_data_o\[7\]
+sram_data_o\[8\]
+sram_data_o\[9\]
+sram_data_o\[10\]
+sram_data_o\[11\]
+sram_data_o\[12\]
+sram_data_o\[13\]
+sram_data_o\[14\]
+sram_data_o\[15\]
+sram_data_o\[16\]
+sram_data_o\[17\]
+sram_data_o\[18\]
+sram_data_o\[19\]
+sram_data_o\[20\]
+sram_data_o\[21\]
+sram_data_o\[22\]
+sram_data_o\[23\]
+sram_data_o\[24\]
+sram_data_o\[25\]
+sram_data_o\[26\]
+sram_data_o\[27\]
+sram_data_o\[28\]
+sram_data_o\[29\]
+sram_data_o\[30\]
+sram_data_o\[31\]
+
+sram_data_i\[0\]
+sram_data_i\[1\]
+sram_data_i\[2\]
+sram_data_i\[3\]
+sram_data_i\[4\]
+sram_data_i\[5\]
+sram_data_i\[6\]
+sram_data_i\[7\]
+sram_data_i\[8\]
+sram_data_i\[9\]
+sram_data_i\[10\]
+sram_data_i\[11\]
+sram_data_i\[12\]
+sram_data_i\[13\]
+sram_data_i\[14\]
+sram_data_i\[15\]
+sram_data_i\[16\]
+sram_data_i\[17\]
+sram_data_i\[18\]
+sram_data_i\[19\]
+sram_data_i\[20\]
+sram_data_i\[21\]
+sram_data_i\[22\]
+sram_data_i\[23\]
+sram_data_i\[24\]
+sram_data_i\[25\]
+sram_data_i\[26\]
+sram_data_i\[27\]
+sram_data_i\[28\]
+sram_data_i\[29\]
+sram_data_i\[30\]
+sram_data_i\[31\]
 
 #S
-addr_o\[0\]
-addr_o\[1\]
-addr_o\[2\]
-addr_o\[3\]
-addr_o\[4\]
-addr_o\[5\]
-addr_o\[6\]
-addr_o\[7\]
-addr_o\[8\]
-addr_o\[9\]
-addr_o\[10\]
-addr_o\[11\]
-addr_o\[12\]
-addr_o\[13\]
-addr_o\[14\]
-addr_o\[15\]
-addr_o\[16\]
-addr_o\[17\]
-addr_o\[18\]
-addr_o\[19\]
-addr_o\[20\]
-addr_o\[21\]
-addr_o\[22\]
-addr_o\[23\]
-addr_o\[24\]
-addr_o\[25\]
-addr_o\[26\]
-addr_o\[27\]
-addr_o\[28\]
-addr_o\[29\]
-addr_o\[30\]
-addr_o\[31\]
-
 clk
-done
-enable
-mem_opdone
 reset
-mem_operation\[0\]
-mem_operation\[1\]
+
+wbctrl_mem_op\[1\]
+wbctrl_mem_op\[0\]
+
+wbctrl_mem_data\[0\]
+wbctrl_mem_data\[1\]
+wbctrl_mem_data\[2\]
+wbctrl_mem_data\[3\]
+wbctrl_mem_data\[4\]
+wbctrl_mem_data\[5\]
+wbctrl_mem_data\[6\]
+wbctrl_mem_data\[7\]
+wbctrl_mem_data\[8\]
+wbctrl_mem_data\[9\]
+wbctrl_mem_data\[10\]
+wbctrl_mem_data\[11\]
+wbctrl_mem_data\[12\]
+wbctrl_mem_data\[13\]
+wbctrl_mem_data\[14\]
+wbctrl_mem_data\[15\]
+wbctrl_mem_data\[16\]
+wbctrl_mem_data\[17\]
+wbctrl_mem_data\[18\]
+wbctrl_mem_data\[19\]
+wbctrl_mem_data\[20\]
+wbctrl_mem_data\[21\]
+wbctrl_mem_data\[22\]
+wbctrl_mem_data\[23\]
+wbctrl_mem_data\[24\]
+wbctrl_mem_data\[25\]
+wbctrl_mem_data\[26\]
+wbctrl_mem_data\[27\]
+wbctrl_mem_data\[28\]
+wbctrl_mem_data\[29\]
+wbctrl_mem_data\[30\]
+wbctrl_mem_data\[31\]
+
+wbctrl_mem_addr\[0\]
+wbctrl_mem_addr\[1\]
+wbctrl_mem_addr\[2\]
+wbctrl_mem_addr\[3\]
+wbctrl_mem_addr\[4\]
+wbctrl_mem_addr\[5\]
+wbctrl_mem_addr\[6\]
+wbctrl_mem_addr\[7\]
+wbctrl_mem_addr\[8\]
+wbctrl_mem_addr\[9\]
+wbctrl_mem_addr\[10\]
+wbctrl_mem_addr\[11\]
+wbctrl_mem_addr\[12\]
+wbctrl_mem_addr\[13\]
+wbctrl_mem_addr\[14\]
+wbctrl_mem_addr\[15\]
+wbctrl_mem_addr\[16\]
+wbctrl_mem_addr\[17\]
+wbctrl_mem_addr\[18\]
+wbctrl_mem_addr\[19\]
+wbctrl_mem_addr\[20\]
+wbctrl_mem_addr\[21\]
+wbctrl_mem_addr\[22\]
+wbctrl_mem_addr\[23\]
+wbctrl_mem_addr\[24\]
+wbctrl_mem_addr\[25\]
+wbctrl_mem_addr\[26\]
+wbctrl_mem_addr\[27\]
+wbctrl_mem_addr\[28\]
+wbctrl_mem_addr\[29\]
+wbctrl_mem_addr\[30\]
+wbctrl_mem_addr\[31\]
+
+operation\[0\]
+operation\[1\]
+operation\[2\]
+operation\[3\]
+operation\[4\]
+operation\[5\]
+operation\[6\]
+operation\[7\]
+operation\[8\]
+operation\[9\]
+operation\[10\]
+operation\[11\]
+operation\[12\]
+operation\[13\]
+operation\[14\]
+operation\[15\]
+operation\[16\]
+operation\[17\]
+operation\[18\]
+operation\[19\]
+operation\[20\]
+operation\[21\]
+operation\[22\]
+operation\[23\]
+operation\[24\]
+operation\[25\]
+operation\[26\]
+operation\[27\]
+operation\[28\]
+operation\[29\]
+operation\[30\]
+operation\[31\]
+
