--- a/openlane/Wishbone_Slave_Controller/pin_order.cfg
+++ b/openlane/Wishbone_Slave_Controller/pin_order.cfg
@@ -1,111 +1,731 @@
 #BUS_SORT
+#N
+clk
+reset
+finished
+mem_opdone
+
+wbctrl_mem_op\[0\]
+wbctrl_mem_op\[1\]
+
+wbctrl_mem_data\[0\]
+wbctrl_mem_data\[1\]
+wbctrl_mem_data\[2\]
+wbctrl_mem_data\[3\]
+wbctrl_mem_data\[4\]
+wbctrl_mem_data\[5\]
+wbctrl_mem_data\[6\]
+wbctrl_mem_data\[7\]
+wbctrl_mem_data\[8\]
+wbctrl_mem_data\[9\]
+wbctrl_mem_data\[10\]
+wbctrl_mem_data\[11\]
+wbctrl_mem_data\[12\]
+wbctrl_mem_data\[13\]
+wbctrl_mem_data\[14\]
+wbctrl_mem_data\[15\]
+wbctrl_mem_data\[16\]
+wbctrl_mem_data\[17\]
+wbctrl_mem_data\[18\]
+wbctrl_mem_data\[19\]
+wbctrl_mem_data\[20\]
+wbctrl_mem_data\[21\]
+wbctrl_mem_data\[22\]
+wbctrl_mem_data\[23\]
+wbctrl_mem_data\[24\]
+wbctrl_mem_data\[25\]
+wbctrl_mem_data\[26\]
+wbctrl_mem_data\[27\]
+wbctrl_mem_data\[28\]
+wbctrl_mem_data\[29\]
+wbctrl_mem_data\[30\]
+wbctrl_mem_data\[31\]
+
+wbctrl_mem_addr\[0\]
+wbctrl_mem_addr\[1\]
+wbctrl_mem_addr\[2\]
+wbctrl_mem_addr\[3\]
+wbctrl_mem_addr\[4\]
+wbctrl_mem_addr\[5\]
+wbctrl_mem_addr\[6\]
+wbctrl_mem_addr\[7\]
+wbctrl_mem_addr\[8\]
+wbctrl_mem_addr\[9\]
+wbctrl_mem_addr\[10\]
+wbctrl_mem_addr\[11\]
+wbctrl_mem_addr\[12\]
+wbctrl_mem_addr\[13\]
+wbctrl_mem_addr\[14\]
+wbctrl_mem_addr\[15\]
+wbctrl_mem_addr\[16\]
+wbctrl_mem_addr\[17\]
+wbctrl_mem_addr\[18\]
+wbctrl_mem_addr\[19\]
+wbctrl_mem_addr\[20\]
+wbctrl_mem_addr\[21\]
+wbctrl_mem_addr\[22\]
+wbctrl_mem_addr\[23\]
+wbctrl_mem_addr\[24\]
+wbctrl_mem_addr\[25\]
+wbctrl_mem_addr\[26\]
+wbctrl_mem_addr\[27\]
+wbctrl_mem_addr\[28\]
+wbctrl_mem_addr\[29\]
+wbctrl_mem_addr\[30\]
+wbctrl_mem_addr\[31\]
+
+sram_data\[0\]
+sram_data\[1\]
+sram_data\[2\]
+sram_data\[3\]
+sram_data\[4\]
+sram_data\[5\]
+sram_data\[6\]
+sram_data\[7\]
+sram_data\[8\]
+sram_data\[9\]
+sram_data\[10\]
+sram_data\[11\]
+sram_data\[12\]
+sram_data\[13\]
+sram_data\[14\]
+sram_data\[15\]
+sram_data\[16\]
+sram_data\[17\]
+sram_data\[18\]
+sram_data\[19\]
+sram_data\[20\]
+sram_data\[21\]
+sram_data\[22\]
+sram_data\[23\]
+sram_data\[24\]
+sram_data\[25\]
+sram_data\[26\]
+sram_data\[27\]
+sram_data\[28\]
+sram_data\[29\]
+sram_data\[30\]
+sram_data\[31\]
+
+operation\[0\]
+operation\[1\]
+operation\[2\]
+operation\[3\]
+operation\[4\]
+operation\[5\]
+operation\[6\]
+operation\[7\]
+operation\[8\]
+operation\[9\]
+operation\[10\]
+operation\[11\]
+operation\[12\]
+operation\[13\]
+operation\[14\]
+operation\[15\]
+operation\[16\]
+operation\[17\]
+operation\[18\]
+operation\[19\]
+operation\[20\]
+operation\[21\]
+operation\[22\]
+operation\[23\]
+operation\[24\]
+operation\[25\]
+operation\[26\]
+operation\[27\]
+operation\[28\]
+operation\[29\]
+operation\[30\]
+operation\[31\]
+
+status\[0\]
+status\[1\]
+status\[2\]
+status\[3\]
+status\[4\]
+status\[5\]
+status\[6\]
+status\[7\]
+status\[8\]
+status\[9\]
+status\[10\]
+status\[11\]
+status\[12\]
+status\[13\]
+status\[14\]
+status\[15\]
+status\[16\]
+status\[17\]
+status\[18\]
+status\[19\]
+status\[20\]
+status\[21\]
+status\[22\]
+status\[23\]
+status\[24\]
+status\[25\]
+status\[26\]
+status\[27\]
+status\[28\]
+status\[29\]
+status\[30\]
+status\[31\]
 
 #E
-data_i\[0\]
-data_i\[1\]
-data_i\[2\]
-data_i\[3\]
-data_i\[4\]
-data_i\[5\]
-data_i\[6\]
-data_i\[7\]
-data_i\[8\]
-data_i\[9\]
-data_i\[10\]
-data_i\[11\]
-data_i\[12\]
-data_i\[13\]
-data_i\[14\]
-data_i\[15\]
-data_i\[16\]
-data_i\[17\]
-data_i\[18\]
-data_i\[19\]
-data_i\[20\]
-data_i\[21\]
-data_i\[22\]
-data_i\[23\]
-data_i\[24\]
-data_i\[25\]
-data_i\[26\]
-data_i\[27\]
-data_i\[28\]
-data_i\[29\]
-data_i\[30\]
-data_i\[31\]
-
-#W
-data_o\[0\]
-data_o\[1\]
-data_o\[2\]
-data_o\[3\]
-data_o\[4\]
-data_o\[5\]
-data_o\[6\]
-data_o\[7\]
-data_o\[8\]
-data_o\[9\]
-data_o\[10\]
-data_o\[11\]
-data_o\[12\]
-data_o\[13\]
-data_o\[14\]
-data_o\[15\]
-data_o\[16\]
-data_o\[17\]
-data_o\[18\]
-data_o\[19\]
-data_o\[20\]
-data_o\[21\]
-data_o\[22\]
-data_o\[23\]
-data_o\[24\]
-data_o\[25\]
-data_o\[26\]
-data_o\[27\]
-data_o\[28\]
-data_o\[29\]
-data_o\[30\]
-data_o\[31\]
+la_data_out\[0\]
+la_data_out\[1\]
+la_data_out\[2\]
+la_data_out\[3\]
+la_data_out\[4\]
+la_data_out\[5\]
+la_data_out\[6\]
+la_data_out\[7\]
+la_data_out\[8\]
+la_data_out\[9\]
+la_data_out\[10\]
+la_data_out\[11\]
+la_data_out\[12\]
+la_data_out\[13\]
+la_data_out\[14\]
+la_data_out\[15\]
+la_data_out\[16\]
+la_data_out\[17\]
+la_data_out\[18\]
+la_data_out\[19\]
+la_data_out\[20\]
+la_data_out\[21\]
+la_data_out\[22\]
+la_data_out\[23\]
+la_data_out\[24\]
+la_data_out\[25\]
+la_data_out\[26\]
+la_data_out\[27\]
+la_data_out\[28\]
+la_data_out\[29\]
+la_data_out\[30\]
+la_data_out\[31\]
+la_data_out\[32\]
+la_data_out\[33\]
+la_data_out\[34\]
+la_data_out\[35\]
+la_data_out\[36\]
+la_data_out\[37\]
+la_data_out\[38\]
+la_data_out\[39\]
+la_data_out\[40\]
+la_data_out\[41\]
+la_data_out\[42\]
+la_data_out\[43\]
+la_data_out\[44\]
+la_data_out\[45\]
+la_data_out\[46\]
+la_data_out\[47\]
+la_data_out\[48\]
+la_data_out\[49\]
+la_data_out\[50\]
+la_data_out\[51\]
+la_data_out\[52\]
+la_data_out\[53\]
+la_data_out\[54\]
+la_data_out\[55\]
+la_data_out\[56\]
+la_data_out\[57\]
+la_data_out\[58\]
+la_data_out\[59\]
+la_data_out\[60\]
+la_data_out\[61\]
+la_data_out\[62\]
+la_data_out\[63\]
+la_data_out\[64\]
+la_data_out\[65\]
+la_data_out\[66\]
+la_data_out\[67\]
+la_data_out\[68\]
+la_data_out\[69\]
+la_data_out\[70\]
+la_data_out\[71\]
+la_data_out\[72\]
+la_data_out\[73\]
+la_data_out\[74\]
+la_data_out\[75\]
+la_data_out\[76\]
+la_data_out\[77\]
+la_data_out\[78\]
+la_data_out\[79\]
+la_data_out\[80\]
+la_data_out\[81\]
+la_data_out\[82\]
+la_data_out\[83\]
+la_data_out\[84\]
+la_data_out\[85\]
+la_data_out\[86\]
+la_data_out\[87\]
+la_data_out\[88\]
+la_data_out\[89\]
+la_data_out\[90\]
+la_data_out\[91\]
+la_data_out\[92\]
+la_data_out\[93\]
+la_data_out\[94\]
+la_data_out\[95\]
+la_data_out\[96\]
+la_data_out\[97\]
+la_data_out\[98\]
+la_data_out\[99\]
+la_data_out\[100\]
+la_data_out\[101\]
+la_data_out\[102\]
+la_data_out\[103\]
+la_data_out\[104\]
+la_data_out\[105\]
+la_data_out\[106\]
+la_data_out\[107\]
+la_data_out\[108\]
+la_data_out\[109\]
+la_data_out\[110\]
+la_data_out\[111\]
+la_data_out\[112\]
+la_data_out\[113\]
+la_data_out\[114\]
+la_data_out\[115\]
+la_data_out\[116\]
+la_data_out\[117\]
+la_data_out\[118\]
+la_data_out\[119\]
+la_data_out\[120\]
+la_data_out\[121\]
+la_data_out\[122\]
+la_data_out\[123\]
+la_data_out\[124\]
+la_data_out\[125\]
+la_data_out\[126\]
+la_data_out\[127\]
 
 #S
-addr_o\[0\]
-addr_o\[1\]
-addr_o\[2\]
-addr_o\[3\]
-addr_o\[4\]
-addr_o\[5\]
-addr_o\[6\]
-addr_o\[7\]
-addr_o\[8\]
-addr_o\[9\]
-addr_o\[10\]
-addr_o\[11\]
-addr_o\[12\]
-addr_o\[13\]
-addr_o\[14\]
-addr_o\[15\]
-addr_o\[16\]
-addr_o\[17\]
-addr_o\[18\]
-addr_o\[19\]
-addr_o\[20\]
-addr_o\[21\]
-addr_o\[22\]
-addr_o\[23\]
-addr_o\[24\]
-addr_o\[25\]
-addr_o\[26\]
-addr_o\[27\]
-addr_o\[28\]
-addr_o\[29\]
-addr_o\[30\]
-addr_o\[31\]
+wb_ack_o
+wb_clk_i
+wb_cyc_i
+wb_rst_i
+wb_stb_i
+wb_we_i
 
-clk
-done
-enable
-mem_opdone
-reset
-mem_operation\[0\]
-mem_operation\[1\]
+wb_sel_i\[0\]
+wb_sel_i\[1\]
+wb_sel_i\[2\]
+wb_sel_i\[3\]
+
+irq\[0\]
+irq\[1\]
+irq\[2\]
+
+wb_adr_i\[0\]
+wb_adr_i\[1\]
+wb_adr_i\[2\]
+wb_adr_i\[3\]
+wb_adr_i\[4\]
+wb_adr_i\[5\]
+wb_adr_i\[6\]
+wb_adr_i\[7\]
+wb_adr_i\[8\]
+wb_adr_i\[9\]
+wb_adr_i\[10\]
+wb_adr_i\[11\]
+wb_adr_i\[12\]
+wb_adr_i\[13\]
+wb_adr_i\[14\]
+wb_adr_i\[15\]
+wb_adr_i\[16\]
+wb_adr_i\[17\]
+wb_adr_i\[18\]
+wb_adr_i\[19\]
+wb_adr_i\[20\]
+wb_adr_i\[21\]
+wb_adr_i\[22\]
+wb_adr_i\[23\]
+wb_adr_i\[24\]
+wb_adr_i\[25\]
+wb_adr_i\[26\]
+wb_adr_i\[27\]
+wb_adr_i\[28\]
+wb_adr_i\[29\]
+wb_adr_i\[30\]
+wb_adr_i\[31\]
+
+wb_data_i\[0\]
+wb_data_i\[1\]
+wb_data_i\[2\]
+wb_data_i\[3\]
+wb_data_i\[4\]
+wb_data_i\[5\]
+wb_data_i\[6\]
+wb_data_i\[7\]
+wb_data_i\[8\]
+wb_data_i\[9\]
+wb_data_i\[10\]
+wb_data_i\[11\]
+wb_data_i\[12\]
+wb_data_i\[13\]
+wb_data_i\[14\]
+wb_data_i\[15\]
+wb_data_i\[16\]
+wb_data_i\[17\]
+wb_data_i\[18\]
+wb_data_i\[19\]
+wb_data_i\[20\]
+wb_data_i\[21\]
+wb_data_i\[22\]
+wb_data_i\[23\]
+wb_data_i\[24\]
+wb_data_i\[25\]
+wb_data_i\[26\]
+wb_data_i\[27\]
+wb_data_i\[28\]
+wb_data_i\[29\]
+wb_data_i\[30\]
+wb_data_i\[31\]
+
+wb_data_o\[0\]
+wb_data_o\[1\]
+wb_data_o\[2\]
+wb_data_o\[3\]
+wb_data_o\[4\]
+wb_data_o\[5\]
+wb_data_o\[6\]
+wb_data_o\[7\]
+wb_data_o\[8\]
+wb_data_o\[9\]
+wb_data_o\[10\]
+wb_data_o\[11\]
+wb_data_o\[12\]
+wb_data_o\[13\]
+wb_data_o\[14\]
+wb_data_o\[15\]
+wb_data_o\[16\]
+wb_data_o\[17\]
+wb_data_o\[18\]
+wb_data_o\[19\]
+wb_data_o\[20\]
+wb_data_o\[21\]
+wb_data_o\[22\]
+wb_data_o\[23\]
+wb_data_o\[24\]
+wb_data_o\[25\]
+wb_data_o\[26\]
+wb_data_o\[27\]
+wb_data_o\[28\]
+wb_data_o\[29\]
+wb_data_o\[30\]
+wb_data_o\[31\]
+
+io_in\[0\]
+io_in\[1\]
+io_in\[2\]
+io_in\[3\]
+io_in\[4\]
+io_in\[5\]
+io_in\[6\]
+io_in\[7\]
+io_in\[8\]
+io_in\[9\]
+io_in\[10\]
+io_in\[11\]
+io_in\[12\]
+io_in\[13\]
+io_in\[14\]
+io_in\[15\]
+
+io_out\[0\]
+io_out\[1\]
+io_out\[2\]
+io_out\[3\]
+io_out\[4\]
+io_out\[5\]
+io_out\[6\]
+io_out\[7\]
+io_out\[8\]
+io_out\[9\]
+io_out\[10\]
+io_out\[11\]
+io_out\[12\]
+io_out\[13\]
+io_out\[14\]
+io_out\[15\]
+
+io_oeb\[0\]
+io_oeb\[1\]
+io_oeb\[2\]
+io_oeb\[3\]
+io_oeb\[4\]
+io_oeb\[5\]
+io_oeb\[6\]
+io_oeb\[7\]
+io_oeb\[8\]
+io_oeb\[9\]
+io_oeb\[10\]
+io_oeb\[11\]
+io_oeb\[12\]
+io_oeb\[13\]
+io_oeb\[14\]
+io_oeb\[15\]
+
+la_data_in\[0\]
+la_data_in\[1\]
+la_data_in\[2\]
+la_data_in\[3\]
+la_data_in\[4\]
+la_data_in\[5\]
+la_data_in\[6\]
+la_data_in\[7\]
+la_data_in\[8\]
+la_data_in\[9\]
+la_data_in\[10\]
+la_data_in\[11\]
+la_data_in\[12\]
+la_data_in\[13\]
+la_data_in\[14\]
+la_data_in\[15\]
+la_data_in\[16\]
+la_data_in\[17\]
+la_data_in\[18\]
+la_data_in\[19\]
+la_data_in\[20\]
+la_data_in\[21\]
+la_data_in\[22\]
+la_data_in\[23\]
+la_data_in\[24\]
+la_data_in\[25\]
+la_data_in\[26\]
+la_data_in\[27\]
+la_data_in\[28\]
+la_data_in\[29\]
+la_data_in\[30\]
+la_data_in\[31\]
+la_data_in\[32\]
+la_data_in\[33\]
+la_data_in\[34\]
+la_data_in\[35\]
+la_data_in\[36\]
+la_data_in\[37\]
+la_data_in\[38\]
+la_data_in\[39\]
+la_data_in\[40\]
+la_data_in\[41\]
+la_data_in\[42\]
+la_data_in\[43\]
+la_data_in\[44\]
+la_data_in\[45\]
+la_data_in\[46\]
+la_data_in\[47\]
+la_data_in\[48\]
+la_data_in\[49\]
+la_data_in\[50\]
+la_data_in\[51\]
+la_data_in\[52\]
+la_data_in\[53\]
+la_data_in\[54\]
+la_data_in\[55\]
+la_data_in\[56\]
+la_data_in\[57\]
+la_data_in\[58\]
+la_data_in\[59\]
+la_data_in\[60\]
+la_data_in\[61\]
+la_data_in\[62\]
+la_data_in\[63\]
+la_data_in\[64\]
+la_data_in\[65\]
+la_data_in\[66\]
+la_data_in\[67\]
+la_data_in\[68\]
+la_data_in\[69\]
+la_data_in\[70\]
+la_data_in\[71\]
+la_data_in\[72\]
+la_data_in\[73\]
+la_data_in\[74\]
+la_data_in\[75\]
+la_data_in\[76\]
+la_data_in\[77\]
+la_data_in\[78\]
+la_data_in\[79\]
+la_data_in\[80\]
+la_data_in\[81\]
+la_data_in\[82\]
+la_data_in\[83\]
+la_data_in\[84\]
+la_data_in\[85\]
+la_data_in\[86\]
+la_data_in\[87\]
+la_data_in\[88\]
+la_data_in\[89\]
+la_data_in\[90\]
+la_data_in\[91\]
+la_data_in\[92\]
+la_data_in\[93\]
+la_data_in\[94\]
+la_data_in\[95\]
+la_data_in\[96\]
+la_data_in\[97\]
+la_data_in\[98\]
+la_data_in\[99\]
+la_data_in\[100\]
+la_data_in\[101\]
+la_data_in\[102\]
+la_data_in\[103\]
+la_data_in\[104\]
+la_data_in\[105\]
+la_data_in\[106\]
+la_data_in\[107\]
+la_data_in\[108\]
+la_data_in\[109\]
+la_data_in\[110\]
+la_data_in\[111\]
+la_data_in\[112\]
+la_data_in\[113\]
+la_data_in\[114\]
+la_data_in\[115\]
+la_data_in\[116\]
+la_data_in\[117\]
+la_data_in\[118\]
+la_data_in\[119\]
+la_data_in\[120\]
+la_data_in\[121\]
+la_data_in\[122\]
+la_data_in\[123\]
+la_data_in\[124\]
+la_data_in\[125\]
+la_data_in\[126\]
+la_data_in\[127\]
+
+#W
+la_oenb\[0\]
+la_oenb\[1\]
+la_oenb\[2\]
+la_oenb\[3\]
+la_oenb\[4\]
+la_oenb\[5\]
+la_oenb\[6\]
+la_oenb\[7\]
+la_oenb\[8\]
+la_oenb\[9\]
+la_oenb\[10\]
+la_oenb\[11\]
+la_oenb\[12\]
+la_oenb\[13\]
+la_oenb\[14\]
+la_oenb\[15\]
+la_oenb\[16\]
+la_oenb\[17\]
+la_oenb\[18\]
+la_oenb\[19\]
+la_oenb\[20\]
+la_oenb\[21\]
+la_oenb\[22\]
+la_oenb\[23\]
+la_oenb\[24\]
+la_oenb\[25\]
+la_oenb\[26\]
+la_oenb\[27\]
+la_oenb\[28\]
+la_oenb\[29\]
+la_oenb\[30\]
+la_oenb\[31\]
+la_oenb\[32\]
+la_oenb\[33\]
+la_oenb\[34\]
+la_oenb\[35\]
+la_oenb\[36\]
+la_oenb\[37\]
+la_oenb\[38\]
+la_oenb\[39\]
+la_oenb\[40\]
+la_oenb\[41\]
+la_oenb\[42\]
+la_oenb\[43\]
+la_oenb\[44\]
+la_oenb\[45\]
+la_oenb\[46\]
+la_oenb\[47\]
+la_oenb\[48\]
+la_oenb\[49\]
+la_oenb\[50\]
+la_oenb\[51\]
+la_oenb\[52\]
+la_oenb\[53\]
+la_oenb\[54\]
+la_oenb\[55\]
+la_oenb\[56\]
+la_oenb\[57\]
+la_oenb\[58\]
+la_oenb\[59\]
+la_oenb\[60\]
+la_oenb\[61\]
+la_oenb\[62\]
+la_oenb\[63\]
+la_oenb\[64\]
+la_oenb\[65\]
+la_oenb\[66\]
+la_oenb\[67\]
+la_oenb\[68\]
+la_oenb\[69\]
+la_oenb\[70\]
+la_oenb\[71\]
+la_oenb\[72\]
+la_oenb\[73\]
+la_oenb\[74\]
+la_oenb\[75\]
+la_oenb\[76\]
+la_oenb\[77\]
+la_oenb\[78\]
+la_oenb\[79\]
+la_oenb\[80\]
+la_oenb\[81\]
+la_oenb\[82\]
+la_oenb\[83\]
+la_oenb\[84\]
+la_oenb\[85\]
+la_oenb\[86\]
+la_oenb\[87\]
+la_oenb\[88\]
+la_oenb\[89\]
+la_oenb\[90\]
+la_oenb\[91\]
+la_oenb\[92\]
+la_oenb\[93\]
+la_oenb\[94\]
+la_oenb\[95\]
+la_oenb\[96\]
+la_oenb\[97\]
+la_oenb\[98\]
+la_oenb\[99\]
+la_oenb\[100\]
+la_oenb\[101\]
+la_oenb\[102\]
+la_oenb\[103\]
+la_oenb\[104\]
+la_oenb\[105\]
+la_oenb\[106\]
+la_oenb\[107\]
+la_oenb\[108\]
+la_oenb\[109\]
+la_oenb\[110\]
+la_oenb\[111\]
+la_oenb\[112\]
+la_oenb\[113\]
+la_oenb\[114\]
+la_oenb\[115\]
+la_oenb\[116\]
+la_oenb\[117\]
+la_oenb\[118\]
+la_oenb\[119\]
+la_oenb\[120\]
+la_oenb\[121\]
+la_oenb\[122\]
+la_oenb\[123\]
+la_oenb\[124\]
+la_oenb\[125\]
+la_oenb\[126\]
+la_oenb\[127\]
+
